Corrected alignment of login form and displaying of captions and likes

--- a/src/common/header/Header.css
+++ b/src/common/header/Header.css
@@ -2,3 +2,7 @@
     color: #ffffff;
     font-size: px;
   }
+
+  .parent-div {
+    margin-bottom: 80px;
+  }
